// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package RestLib;		// namespace

// The CRUDs service definition.
service CRUDs {
  rpc CCFill (QryProxy) returns (stream CCProxy) {}
  rpc CCUpdate (CCProxy) returns (CCProxy) {}
}
message QryProxy {
  string query = 1;
  string param = 2;
}

// Competitions
message CCProxy {
	string RowSte = 1;
	string RowErr = 2;
	uint64 RowUsr = 3;
	uint64 RowKey = 4;

  string Ad = 5;
  string Skl = 6;
	string Grp = 7;
	string Info = 8;
	bool isRun = 9;
	bool isRnkd = 10;
}

